Implemented the initial ranking system  * four votes of the same rating will score higher than one vote  * now we have a JSON writer that outputs the results for logging purposes  * also implemented downloading torrents

--- a/config.yml
+++ b/config.yml
@@ -1,8 +1,9 @@
 ---
-filter_out_less_than_percentage: 90
+filter_out_less_than_percentage: 95
 filter_out_non_certified: 1
 filter_out_already_downloaded: 1
 comments:
-    analyze: true
+    analyze: false
     quality: high # or low
-    results_to_analyze: 5
+    results_to_analyze: 15
+download_directory: tmp/torrents
