--- a/config.yml
+++ b/config.yml
@@ -1,9 +1,9 @@
 ---
-filter_out_less_than_percentage: 85
-filter_out_non_certified: 1
-filter_out_already_downloaded: 1
+filter_out_less_than_percentage: 90
+filter_out_non_certified: true
+filter_out_already_downloaded: true
 comments:
     analyze: true # Turning this off isn't even supported right now.
     quality: high # or low
-    results_to_analyze: 8
+    results_to_analyze: 15
 download_directory: ~/Torrents
