New feature! Download an array of movies from a file.
* Very useful to use with the_mobile_pirate, check that repo
* Also added a cron entry to run that rake task every five minutes
* Documentation updated

--- a/config/config.template.yml
+++ b/config/config.template.yml
@@ -8,3 +8,4 @@ comments:
     num_to_analyze: 10
     minimum_seeds: 50
 download_directory: ~/Torrents
+watch_file: /Users/admin/Sites/the_mobile_pirate/movies_to_download.txt
