--- a/config/config.template.yml
+++ b/config/config.template.yml
@@ -3,6 +3,7 @@ filter_out_less_than_percentage: 85
 filter_out_non_certified_fresh: true
 filter_out_already_downloaded: true
 filter_out_maximum_downloads: 5
+use_magnet_links: true
 comments:
     analyze: true
     quality: high # or low
