--- a/config/config.template.yml
+++ b/config/config.template.yml
@@ -4,6 +4,7 @@ filter_out_non_certified_fresh: true
 filter_out_already_downloaded: true
 filter_out_maximum_downloads: 5
 use_magnet_links: true
+dry_run: false
 comments:
     analyze: true
     quality: high # or low
